# l4

./: CMakeLists.txt  Makefile  l4.ioc
Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  taskUtils.h
Core/Src/: freertos.c  gpio.c  main.cpp  stm32l4xx_it.c
Core/Src/tasks/: freertos.cpp  heartbeat.cpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
